Fix gaps

--- a/src/SearchField.scss
+++ b/src/SearchField.scss
@@ -4,7 +4,7 @@ $top-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
   width: 320px;
   padding: 2px;
   border-radius: 12px;
-  margin: 20px auto;
+  margin: 20px auto 30px;
   background-color: #fff;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.15), 0 22px 30px rgba(0, 0, 0, 0.25);
 
@@ -53,7 +53,7 @@ $top-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
     color: #222;
     border-top-right-radius: 7px;
     border-bottom-right-radius: 7px;
-    padding: 0 0 0 10px;
+    padding: 0 0 0 20px;
     font-size: 72px;
     line-height: 50px;
     text-transform: uppercase;
